[package]
name = "fluent-plots"
version = "0.1.0"
edition = "2021"
authors = ["Jose de la Cruz <jonfres@gmail.com>"]
description = "A declarative data visualization library with a fluent API, built on Polars and Charming."
license = "MIT"
repository = "https://github.com/jonfres/fluent-plots"
readme = "README.md"
keywords = ["plot", "chart", "visualization", "polars", "charming"]
categories = ["visualization"]

[dependencies]
plotters = "0.3"
polars = "0.41"
charming = { version = "0.2.0", optional = true }

[features]
interactive = ["dep:charming"]
